--- a/MAKES/Makefile.def.STAMPEDE
+++ b/MAKES/Makefile.def.STAMPEDE
@@ -19,15 +19,15 @@
 # module load petsc
 # PUT YOUR HOME DIRECTOREY HERE IF NOT THE DEFAULT ONE IN 
 
-# HOME  = /gpfs/fmk
+#HOME  = /home1/00477/tg457427/
 
 BASE  = 
 
 FE    = $(HOME)/OpenSees/SRC
 
-#PROGRAMMING_MODE = SEQUENTIAL
+PROGRAMMING_MODE = SEQUENTIAL
 #PROGRAMMING_MODE = PARALLEL
-PROGRAMMING_MODE = PARALLEL_INTERPRETERS
+#PROGRAMMING_MODE = PARALLEL_INTERPRETERS
 
 
 OpenSees_PROGRAM = $(HOME)/bin/OpenSees
@@ -63,8 +63,8 @@ ARPACKdir    = $(HOME)/OpenSees/OTHER/ARPACK
 UMFPACKdir   = $(HOME)/OpenSees/OTHER/UMFPACK
 METISdir     = $(HOME)/OpenSees/OTHER/METIS
 SRCdir       = $(HOME)/OpenSees/SRC
-SUPERLUdir   = $(HOME)/OpenSees/OTHER/SuperLU_4.1/SRC
-SUPERLU_DISTdir   = $(HOME)/OpenSees/OTHER/SuperLU_DIST_2.5/SRC
+SUPERLUdir   = $(HOME)/OpenSees/OTHER/SuperLU_5.1.1/SRC
+SUPERLU_DISTdir   = $(HOME)/OpenSees/OTHER/SuperLU_DIST_4.3/SRC
 CSPARSEdir   = $(HOME)/OpenSees/OTHER/CSPARSE
 
 
@@ -110,6 +110,8 @@ FE_LIBRARY          = $(HOME)/lib/libOpenSees.a
 NDARRAY_LIBRARY     = $(HOME)/lib/libndarray.a  # BJ_UCD jeremic@@ucdavis.edu 
 MATMOD_LIBRARY      = $(HOME)/lib/libmatmod.a   # BJ_UCD jeremic@@ucdavis.edu 
 BJMISC_LIBRARY      = $(HOME)/lib/libBJmisc.a  # BJ_UCD jeremic@@ucdavis.edu
+#LAPACK_LIBRARY      = $(HOME)/lib/libLapack.a
+#BLAS_LIBRARY        = $(HOME)/lib/libBlas.a
 LAPACK_LIBRARY      = 
 BLAS_LIBRARY        = 
 SUPERLU_LIBRARY     = $(HOME)/lib/libSuperLU.a
@@ -118,8 +120,7 @@ CBLAS_LIBRARY       = $(HOME)/lib/libCBlas.a
 ARPACK_LIBRARY      = $(HOME)/lib/libArpack.a
 UMFPACK_LIBRARY     = $(HOME)/lib/libUmfpack.a
 METIS_LIBRARY       = $(HOME)/lib/libMetis.a
-CSPARSE_LIBRARY     = $(HOME)/lib/libCSparse.a
-
+CSPARSE_LIBRARY     = $(HOME)/lib/libCSparse.a 
 DISTRIBUTED_SUPERLU_LIBRARY     = $(HOME)/lib/libDistributedSuperLU.a
 
 ifeq ($(PROGRAMMING_MODE), SEQUENTIAL)
@@ -162,7 +163,7 @@ WIPE_LIBS	= $(FE_LIBRARY) \
 # ################################################### 
 
 
-MPI_DIR = $(MPICH_HOME)
+MPI_DIR = $(MPICH_HOME)/intel64
 MPI_BIN = $(MPI_DIR)/bin
 
 ifeq ($(PROGRAMMING_MODE), SEQUENTIAL)
@@ -170,6 +171,7 @@ ifeq ($(PROGRAMMING_MODE), SEQUENTIAL)
 CC++            =  $(ICC_BIN)/icpc
 CC              =  $(ICC_BIN)/icc
 FC              =  $(IFC_BIN)/ifort
+F90              =  $(FC)
 LINKER           = $(CC++)
  
 else
@@ -218,16 +220,17 @@ DEBUG_FLAG =
 MUMPS_FLAG = 
 PETSC_FLAG =
 
+#OPT_FLAG = -fPIC
 OPT_FLAG = -O2 
 #OPT_FLAG = -O0
 
 COMP_FLAG = -DMPICH_IGNORE_CXX_SEEK 
 
-C++FLAGS         = -D_LINUX -D_UNIX  $(GRAPHIC_FLAG) $(RELIABILITY_FLAG) $(DEBUG_FLAG) $(OPT_FLAG) $(COMP_FLAG)\
+C++FLAGS         = -I${MKLROOT}/include/intel64/lp64 -I${MKLROOT}/include -D_LINUX -D_UNIX  $(GRAPHIC_FLAG) $(RELIABILITY_FLAG) $(DEBUG_FLAG) $(OPT_FLAG) $(COMP_FLAG)\
 		$(PROGRAMMING_FLAG)  $(PETSC_FLAG) $(MUMPS_FLAG) \
 		-D_TCL85 -D_BLAS
 
-CFLAGS          =  $(GRAPHIC_FLAG) $(RELIABILITY_FLAG) $(DEBUG_FLAG)$(PROGRAMMING_FLAG) $(OPT_FLAG) $(COMP_FLAG) -D_TCL85 -D_BLAS
+CFLAGS          =  -I${MKLROOT}/include/intel64/lp64 -I${MKLROOT}/include $(GRAPHIC_FLAG) $(RELIABILITY_FLAG) $(DEBUG_FLAG)$(PROGRAMMING_FLAG) $(OPT_FLAG) $(COMP_FLAG) -D_TCL85 -D_BLAS
 FFLAGS          =  $(OPT_FLAG) $(COMP_FLAG)
 LINKFLAGS       = 
 
@@ -346,21 +349,32 @@ else
 
 MUMPS = YES
 MUMPS_FLAG = -D_MUMPS
-#MUMPS_DIR = /gpfs/fmk/MUMPS_4.6.4
-MUMPS_DIR = $(TACC_PETSC_LIB)/..
+MUMPS_DIR = $(HOME)/MUMPS_5.0.0
+#MUMPS_DIR = $(TACC_PETSC_LIB)/..
 
 PLAT    = MPICHGM-INTEL80
 
-SCALAP  = $(BLACSlib) $(SCALAPlib) $(BLACSlib)
+ifeq ($(PROGRAMMING_MODE), PARALLEL)
 
-MUMPS_LIB = -L$(MUMPS_DIR)/lib \
+SCALAP  = $(BLACSlib) $(SCALAPlib) $(BLACSlib) \
+
+endif
+
+ifeq ($(PROGRAMMING_MODE), PARALLEL_INTERPRETERS)
+
+SCALAP  = $(BLACSlib) $(SCALAPlib) $(BLACSlib) \
+	$(FE)/system_of_eqn/linearSOE/mumps/MumpsParallelSolver.o \
+ 	$(FE)/system_of_eqn/linearSOE/mumps/MumpsParallelSOE.o \
 	$(FE)/system_of_eqn/linearSOE/mumps/MumpsSOE.o \
 	$(FE)/system_of_eqn/linearSOE/mumps/MumpsSolver.o \
-	$(FE)/system_of_eqn/linearSOE/mumps/MumpsParallelSOE.o \
-	$(FE)/system_of_eqn/linearSOE/mumps/MumpsParallelSolver.o \
-	  -lpetsc -ldmumps \
-	  -lpord \
-	  $(SCALAP) 
+
+endif
+
+
+MUMPS_LIB = -L$(MUMPS_DIR)/lib \
+	-ldmumps -lmumps_common \
+	-lpord \
+	$(SCALAP) 
 
 MUMPS_INCLUDE = -I$(MUMPS_DIR)/include
 
@@ -375,25 +389,27 @@ PARALLEL_LIB =
 
 else
 
-PARALLEL_LIB = $(FE)/system_of_eqn/linearSOE/sparseGEN/DistributedSparseGenColLinSOE.o \
-	$(FE)/system_of_eqn/linearSOE/sparseGEN/DistributedSuperLU.o \
+
+PARALLEL_LIB = \
         -Wl,-rpath,$(MKL_LIB) \
 	-L$(MKL_LIB) \
 	$(MKL_LIB)/libmkl_scalapack_lp64.a \
-	$(MKL_LIB)/libmkl_blacs_lp64.a \
+	$(MKL_LIB)/libmkl_core.a \
+	$(MKL_LIB)/libmkl_blacs_intelmpi_lp64.a \
 	$(MKL_LIB)/libmkl_intel_lp64.a \
 	$(MKL_LIB)/libmkl_sequential.a \
 	$(MKL_LIB)/libmkl_core.a \
 	$(MKL_LIB)/libmkl_sequential.a \
-	$(MKL_LIB)/libmkl_core.a 
+	$(MKL_LIB)/libmkl_core.a
 
 endif
 
 
-
-
 HPM_LIB = 
 
+#  $(FE)/system_of_eqn/linearSOE/sparseGEN/SparseGenColLinSolver.o \
+#  $(FE)/system_of_eqn/linearSOE/sparseGEN/DistributedSparseGenColLinSOE.o \
+#  $(FE)/system_of_eqn/linearSOE/sparseGEN/DistributedSuperLU.o \
 
 MACHINE_NUMERICAL_LIBS  = -lm \
   $(ARPACK_LIBRARY) \
@@ -403,18 +419,17 @@ MACHINE_NUMERICAL_LIBS  = -lm \
   $(GRAPHIC_LIBRARY)\
   $(RELIABILITY_LIBRARY) \
   $(DISTRIBUTED_SUPERLU_LIBRARY) $(CSPARSE_LIBRARY) \
-  $(METIS_LIBRARY) $(PETSC_LIB) $(MUMPS_LIB)  $(CBLAS_LIBRARY)
-
-
-  
+  $(METIS_LIBRARY) $(PETSC_LIB) $(CBLAS_LIBRARY) \
+  $(DISTRIBUTED_SUPERLU_LIBRARY) $(METIS_LIBRARY) \
+  $(LAPACK_LIBRARY) $(MUMPS_LIB) $(BLAS_LIBRARY) $(PARALLEL_LIB)
 
 ifeq ($(PROGRAMMING_MODE), SEQUENTIAL)
 
-MACHINE_SPECIFIC_LIBS =   -mkl=sequential -static-intel -L$(IFC_LIB) -lifcore
+MACHINE_SPECIFIC_LIBS = -mkl=sequential -static-intel -lifcore
 
 else
 
-MACHINE_SPECIFIC_LIBS =   -static-intel -L$(IFC_LIB) -lifcore
+MACHINE_SPECIFIC_LIBS =  -static-intel -L$(IFC_LIB) -lifcore
 
 endif
 
@@ -439,6 +454,6 @@ MACHINE_INCLUDES = -I$(MPICH_HOME)/include \
 include $(FE)/Makefile.incl
 
 #TCL_INCLUDES = -I$(HOME)/include
-
-INCLUDES =  $(TCL_INCLUDES) $(FE_INCLUDES) $(MACHINE_INCLUDES)
+PYTHON_INCLUDES =-I/opt/apps/intel17/python3/3.6.3/include/python3.6m
+INCLUDES =  $(TCL_INCLUDES) $(PYTHON_INCLUDES) $(FE_INCLUDES) $(MACHINE_INCLUDES)
 
