--- a/SRC/element/twoNodeLink/Makefile
+++ b/SRC/element/twoNodeLink/Makefile
@@ -1,7 +1,7 @@
 
 include ../../../Makefile.def
-OBJS       = TwoNodeLink.o \
-	TclTwoNodeLinkCommand.o
+OBJS       = LinearElasticSpring.o \
+    TwoNodeLink.o
 
 # Compilation control
 
